# P100-Electrical-Agent-Suite

./: .dockerignore  .gitattributes  .gitignore  .pr_body.md  MAINTAINERS.md  P100-Electrical-Agent-Suite.code-workspace  PROJECT_SETUP.md  Project Flow Checklist.md  Project_OneDrive_Links_Register_Table.md  Project_comments.md  README.md  dataverse_openapi.json  pyproject.toml  ruleset-current.json
.devcontainer/: Dockerfile  README.devcontainer.md  create_pr.ps1  create_pr.sh  devcontainer.json  postCreate.ps1  postCreate.sh
.github/: CODEOWNERS  LOCAL_RUN.md  PULL_REQUEST_TEMPLATE.md  README-ruleset-doctorgphd.md  labels.yml
.scripts/: clean-untracked.ps1
Solution_Dataverse/: DataverseDDD.md  Power_PlatformDDD.md  README.md  Template_entity.json  Template_entity_schema.json  ci.yaml  docker_flow_diagram.md  entity_flow-diagram.md  json-validate.yml  json_xlm_mapping_grounding_file.md
Solution_OneDrive/: Electrical Assistant Structure Table.docx  README.md
Wip_Dataverse/: DataverseDDD.md  Grounding_Variant Handling.md  Variant_master.json  adaptive_card_loop_template.json  minimal_verfication_script.ps1
config/: DoctorGPhD ruleset.yaml
docs/: DoctorGPhD_checks.md  docs_DoctorGPhD_RULES.md  labels.md  mcp_security_plan.md  planning-phase-config.md  power-automate-flows.md
env/: dev-setup.yaml
flows/: GPT5_to_Loop_Flow.json  README.md  config-template.json  github-to-planner-simple.json  github-to-planner-sync.json  github-to-planner-updates.json
grounding-files/: context-pack.md
knowledge/: README.md
mcp/: Dockerfile  README.md  __init__.py  app.py  (+2 more)
(+325 files in other folders)
